--- a/style.css
+++ b/style.css
@@ -1,78 +1,345 @@
 body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Inter, sans-serif;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Inter, sans-serif;
 }
 .nav {
-    width: 100vw;
-    height: 44px;
-    background-color: rgba(245, 245, 247, 0.80);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+  width: 100vw;
+  height: 44px;
+  background-color: rgba(245, 245, 247, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
 }
 .nav-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-    font-family: Inter, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: -0.28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  font-family: Inter, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: -0.28px;
 }
 .icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
 }
 .burger {
-    display: none;
+  display: none;
 }
 .header {
-    width: 100%;
-    height: 52px;
-    color: #1D1D1F;
-    font-family: Inter, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  width: 100%;
+  height: 52px;
+  color: #1d1d1f;
+  font-family: Inter, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .big-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
 }
 .big-content1 {
-    height: 692px;
-    width: 100vw;
-    background-image: url(./images/16pro.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  height: 692px;
+  width: 100vw;
+  background-image: url(./images/16pro.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .big-content2 {
-    height: 692px;
+  height: 692px;
+  width: 100vw;
+  background-image: url(./images/16.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.big-content3 {
+  height: 692px;
+  width: 100vw;
+  background-image: url(./images/gift.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
+.iphone {
+  margin-top: 55px;
+  width: 405px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.iphone-txt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+.iphone-txt1 {
+  height: 60px;
+  color: #f5f5f7;
+  font-size: 52px;
+  font-weight: 500;
+  letter-spacing: -0.28px;
+}
+.iphone-txt2 {
+  height: 32px;
+  color: #f5f5f7;
+  font-size: 24px;
+  font-weight: 300;
+  letter-spacing: -0.28px;
+}
+.iphone-button {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.iphone-button1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  border-radius: 100px;
+  border: 1px solid #0071e3;
+  background-color: #0071e3;
+  color: white;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: -0.374px;
+}
+.iphone-button2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  border-radius: 100px;
+  border: 1px solid #2997ff;
+  color: #2997ff;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: -0.374px;
+}
+.iphone2-button1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  border-radius: 100px;
+  border: 1px solid white;
+  background-color: white;
+  color: black;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: -0.374px;
+}
+.iphone2-button2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  border-radius: 100px;
+  border: 1px solid white;
+  color: white;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: -0.374px;
+}
+.iphone3-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  border-radius: 100px;
+  border: 1px solid #0071e3;
+  background-color: #0071e3;
+  color: white;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: -0.374px;
+  margin-bottom: 82px;
+}
+.iphone3-txt1 {
+  height: 60px;
+  color: black;
+  font-size: 52px;
+  font-weight: 500;
+  letter-spacing: -0.28px;
+}
+.iphone3-txt2 {
+  height: 32px;
+  color: black;
+  font-size: 24px;
+  font-weight: 300;
+  letter-spacing: -0.28px;
+}
+/* tablet size */
+@media (max-width: 768px) {
+  body {
+    gap: 12px;
+  }
+  .burger {
+    display: block;
+  }
+  .nav-menu {
+    display: none;
+  }
+  .nav {
+    width: calc(100vw - 30px);
+    justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .header {
+    width: 440px;
+  }
+  .big-content1 {
+    height: 650px;
+  }
+  .big-content2 {
+    height: 650px;
+  }
+  .big-content3 {
+    height: 650px;
+  }
+  .iphone {
+    margin-top: 58px;
+    width: 405px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+  .iphone-txt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+  }
+  .iphone-txt1 {
+    height: 60px;
+    color: #f5f5f7;
+    font-size: 42px;
+    font-weight: 500;
+    letter-spacing: -0.28px;
+  }
+  .iphone-txt2 {
+    height: 32px;
+    color: #f5f5f7;
+    font-size: 22px;
+    font-weight: 300;
+    letter-spacing: -0.28px;
+  }
+  .iphone3-txt1 {
+    height: 60px;
+    color: black;
+    font-size: 42px;
+    font-weight: 500;
+    letter-spacing: -0.28px;
+  }
+  .iphone3-txt2 {
+    height: 32px;
+    color: black;
+    font-size: 22px;
+    font-weight: 300;
+    letter-spacing: -0.28px;
+  }
+}
+/* phone size */
+@media (max-width: 390px) {
+  .header {
+    width: 320px;
+    height: 73px;
+  }
+  .iphone {
+    margin-top: 36px;
+    width: 241px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+  .iphone1 {
+    margin-top: 350px;
+  }
+  .iphone-txt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+  }
+  .iphone-txt1 {
+    height: 36px;
+    color: #f5f5f7;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 36px;
+    letter-spacing: -0.28px;
+  }
+  .iphone-txt2 {
+    height: 22px;
+    color: #f5f5f7;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 120%;
+    letter-spacing: -0.28px;
+  }
+  .iphone3-txt1 {
+    height: 36px;
+    color: black;
+    font-size: 30px;
+    font-weight: 500;
+    letter-spacing: -0.28px;
+  }
+  .iphone3-txt2 {
+    height: 40px;
+    color: black;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: -0.28px;
+  }
+  .big-content1 {
+    height: 500px;
     width: 100vw;
-    background-image: url(./images/16.jpg);
+    background-image: url(./images/16pro-utas.jpg);
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.big-content3 {
-    height: 692px;
+  }
+  .big-content2 {
+    height: 500px;
+    width: 100vw;
+    background-image: url(./images/16-utas.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .big-content3 {
+    height: 500px;
     width: 100vw;
     background-image: url(./images/gift.jpg);
     background-position: center;
@@ -81,143 +348,82 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-}
-.iphone {
-    margin-top: 55px;
-    width: 405px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
-.iphone-txt {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-}
-.iphone-txt1 {
-    height: 60px;
-    color: #F5F5F7;
-    font-size: 52px;
-    font-weight: 500;
-    letter-spacing: -0.28px;
-}
-.iphone-txt2 {
-    height: 32px;
-    color: #F5F5F7;
-    font-size: 24px;
-    font-weight: 300;
-    letter-spacing: -0.28px;
-}
-.iphone-button {
+  }
+  .iphone-button {
     display: flex;
     align-items: center;
-    gap: 16px;
-}
-.iphone-button1 {
+    gap: 12px;
+  }
+  .iphone-button1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 12px 20px;
+    padding: 8px 16px;
     border-radius: 100px;
-    border: 1px solid #0071E3;
-    background-color: #0071E3;
+    border: 1px solid #0071e3;
+    background-color: #0071e3;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
     letter-spacing: -0.374px;
-}
-.iphone-button2 {
+    line-height: 20px;
+  }
+  .iphone-button2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 12px 20px;
+    padding: 8px 16px;
     border-radius: 100px;
-    border: 1px solid #2997FF;
-    color: #2997FF;
-    font-size: 16px;
+    border: 1px solid #2997ff;
+    color: #2997ff;
+    font-size: 14px;
     font-weight: 300;
     letter-spacing: -0.374px;
-}
-.iphone2-button1 {
+    line-height: 20px;
+  }
+  .iphone2-button1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 12px 20px;
+    padding: 8px 16px;
     border-radius: 100px;
     border: 1px solid white;
     background-color: white;
     color: black;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
     letter-spacing: -0.374px;
-}
-.iphone2-button2 {
+    line-height: 20px;
+  }
+  .iphone2-button2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 12px 20px;
+    padding: 8px 16px;
     border-radius: 100px;
     border: 1px solid white;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
     letter-spacing: -0.374px;
-}
-.iphone3-button {
+    line-height: 20px;
+  }
+  .iphone3-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 12px 20px;
+    padding: 8px 16px;
     border-radius: 100px;
-    border: 1px solid #0071E3;
-    background-color: #0071E3;
+    border: 1px solid #0071e3;
+    background-color: #0071e3;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
     letter-spacing: -0.374px;
-    margin-bottom: 82px;
-}
-.iphone3-txt1 {
-    height: 60px;
-    color: black;
-    font-size: 52px;
-    font-weight: 500;
-    letter-spacing: -0.28px;
-}
-.iphone3-txt2 {
-    height: 32px;
-    color: black;
-    font-size: 24px;
-    font-weight: 300;
-    letter-spacing: -0.28px;
-}
-/* tablet size */
-@media (max-width: 768px) {
-    body {
-        gap: 12px;
-    }
-    .burger {
-        display: block;
-    }
-    .nav-menu {
-        display: none;
-    }
-    .nav {
-        width: calc(100vw - 30px);
-        justify-content: space-between;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-    .header {
-        width: 440px;
-    }
-}
- /* phone size */
-@media (max-width: 390px) {
-     .header {
-        width: 320px;
-        height: 73px;
-     }
+    line-height: 20px;
+    margin-bottom: 0px;
+  }
+  .iphone3 {
+    margin-top: 0;
+  }
 }
