--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-family: Inter, sans-serif;
   gap: 12px;
+  max-width: 2536px;
 }
 .nav {
   width: 100vw;
@@ -51,9 +53,11 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 12px;
+  max-width: 2536px;
 }
 .big-content1 {
   height: 692px;
+  max-width: 2536px;
   width: 100vw;
   background-image: url(./images/16pro.jpg);
   background-position: center;
@@ -64,6 +68,7 @@ body {
 }
 .big-content2 {
   height: 692px;
+  max-width: 2536px;
   width: 100vw;
   background-image: url(./images/16.jpg);
   background-position: center;
@@ -74,6 +79,7 @@ body {
 }
 .big-content3 {
   height: 692px;
+  max-width: 2536px;
   width: 100vw;
   background-image: url(./images/gift.jpg);
   background-position: center;
@@ -195,21 +201,25 @@ body {
   letter-spacing: -0.28px;
 }
 .small-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 .small {
-    width: 100%;
-    height: 580px;
-    display: flex;
-    gap: 12px;
+  width: 100%;
+  height: 580px;
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
+.small-pic {
+  max-width: 1262px;
 }
 .small-content1 {
-    background-image: url(./images/small1.jpg);
-    width: calc(50% - 6px);
-    background-position: center;
+  background-image: url(./images/small1.jpg);
+  width: calc(50% - 6px);
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -217,45 +227,45 @@ body {
   position: relative;
 }
 .small-content2 {
-    background-image: url(./images/small2.jpg);
-    width: calc(50% - 6px);
-    background-position: center;
+  background-image: url(./images/small2.jpg);
+  width: calc(50% - 6px);
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .small-content3 {
-    background-image: url(./images/small3.jpg);
-    width: calc(50% - 6px);
-    background-position: center;
+  background-image: url(./images/small3.jpg);
+  width: calc(50% - 6px);
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .small-content4 {
-    background-image: url(./images/small4.jpg);
-    width: calc(50% - 6px);
-    background-position: center;
+  background-image: url(./images/small4.jpg);
+  width: calc(50% - 6px);
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .small-content5 {
-    background-image: url(./images/small5.jpg);
-    width: calc(50% - 6px);
-    background-position: center;
+  background-image: url(./images/small5.jpg);
+  width: calc(50% - 6px);
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .small-content6 {
-    background-image: url(./images/small6.jpg);
-    width: calc(50% - 6px);
-    background-position: center;
+  background-image: url(./images/small6.jpg);
+  width: calc(50% - 6px);
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -271,21 +281,21 @@ body {
   width: 322px;
 }
 .small-txt1 {
-    height: 44px;
-    font-size: 36px;
-    text-align: center;
-    font-weight: 500;
-    color: #1D1D1F;
+  height: 44px;
+  font-size: 36px;
+  text-align: center;
+  font-weight: 500;
+  color: #1d1d1f;
 }
 .small-txt2 {
-    height: 25px;
-    font-size: 18px;
-    text-align: center;
-    font-weight: 300;
-    color: #1D1D1F;
+  height: 25px;
+  font-size: 18px;
+  text-align: center;
+  font-weight: 300;
+  color: #1d1d1f;
 }
 .small-button {
-    display: flex;
+  display: flex;
   align-items: center;
   gap: 16px;
   margin-top: 10px;
@@ -316,25 +326,31 @@ body {
   letter-spacing: -0.374px;
 }
 .small1-txt1 {
-    background-image: url(./images/ipadair.png);
-    height: 33px;
-    width: 430px;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-bottom: 9px;
+  background-image: url(./images/ipadair.png);
+  height: 33px;
+  width: 430px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 9px;
 }
 .color-txt {
-    width: 169px;
-    height: 18px;
-    text-align: center;
-    font-size: 14px;
-    font-weight: 400;
-    background: linear-gradient(90deg, #0090F7 0%, #BA62FC 33.33%, #F2416B 66.67%, #F55600 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    position: absolute;
-    bottom: 50px;
+  width: 169px;
+  height: 18px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  background: linear-gradient(
+    90deg,
+    #0090f7 0%,
+    #ba62fc 33.33%,
+    #f2416b 66.67%,
+    #f55600 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: absolute;
+  bottom: 50px;
 }
 .small2-txt {
   display: flex;
@@ -345,40 +361,165 @@ body {
   margin-top: 401px;
 }
 .small2-color {
-    color: #F5F5F7;
+  color: #f5f5f7;
 }
 .small3-txt1 {
-    width: 152px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4px;
+  width: 152px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
 }
 .small3-watch1 {
-    display: flex;
-    gap: 8px;
-    align-items: flex-start;
+  display: flex;
+  gap: 8px;
+  align-items: flex-start;
 }
 .small3-watch1txt {
-    text-align: center;
-    font-size: 32px;
-    font-weight: 600;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 600;
 }
 .small3-watch2 {
-    color: black;
-    text-align: center;
-    font-size: 15px;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 2px;
+  color: black;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 2px;
 }
 .small3-txt2 {
-    font-size: 18px;
-    text-align: center;
-    font-weight: 300;
-    color: #1D1D1F;
-    line-height: 25px;
-    margin-bottom: 16px;
+  font-size: 18px;
+  text-align: center;
+  font-weight: 300;
+  color: #1d1d1f;
+  line-height: 25px;
+  margin-bottom: 16px;
+}
+.scroll-big {
+  width: 100%;
+  height: 668px;
+  display: flex;
+  gap: 12px;
+  overflow: auto;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+.scroll-big ::-webkit-scrollbar {
+  display: none;
+}
+.poster {
+  height: 668px;
+  min-width: 1250px;
+  scroll-snap-align: center;
+}
+.movie1 {
+  background-image: url(./images/movie1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  object-fit: cover;
+}
+.movie2 {
+  background-image: url(./images/movie2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.movie3 {
+  background-image: url(./images/movie3.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.movie4 {
+  background-image: url(./images/movie4.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.movie5 {
+  background-image: url(./images/movie5.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.movie6 {
+  background-image: url(./images/movie6.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.movie7 {
+  background-image: url(./images/movie7.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.movie8 {
+  background-image: url(./images/movie8.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.movie9 {
+  background-image: url(./images/movie9.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.stream {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+  margin-left: 70px;
+  margin-top: 566px;
+}
+.stream-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  border-radius: 100px;
+  background-color: #f5f5f7;
+  font-size: 17px;
+  font-weight: 300;
+  flex-shrink: 0;
+}
+.stream-genre {
+  display: flex;
+  gap: 5px;
+  font-size: 17px;
+  color: white;
+  line-height: 20px;
+  font-weight: 400;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+}
+.highlight {
+  font-weight: 700;
+}
+.tseg {
+  font-weight: 900;
+}
+.stream-box:hover {
+  background-color: white;
+}
+.scroll-dot {
+  width: 220px;
+  height: 8px;
+  display: flex;
+  justify-content: space-around;
+}
+.circle {
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  background-color: rgba(0, 0, 0, 0.42);
+}
+.circle:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 /* tablet size */
 @media (max-width: 768px) {
@@ -453,7 +594,7 @@ body {
   }
   .small {
     height: 490px;
-    background-size: cover; 
+    background-size: cover;
   }
   .small-pic {
     background-size: cover;
@@ -462,133 +603,155 @@ body {
     background-image: url(./images/watch10.jpg);
     width: calc(50% - 6px);
     background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .small-txt {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2px;
-  margin: 0;
-  margin-top: 42px;
-  width: 241px;
-}
-.small-txt1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    margin: 0;
+    margin-top: 42px;
+    width: 241px;
+  }
+  .small-txt1 {
     height: 36px;
     font-size: 30px;
     text-align: center;
     font-weight: 500;
-    color: #1D1D1F;
-}
-.small-txt2 {
+    color: #1d1d1f;
+  }
+  .small-txt2 {
     height: 23px;
     font-size: 18px;
     text-align: center;
     font-weight: 300;
-    color: #1D1D1F;
-}
-.small-button {
+    color: #1d1d1f;
+  }
+  .small-button {
     display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-top: 16px;
-}
-.small-button1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 8px 16px;
-  border-radius: 100px;
-  border: 1px solid #0071e3;
-  background-color: #0071e3;
-  color: white;
-  font-size: 14px;
-  font-weight: 300;
-  letter-spacing: -0.374px;
-}
-.small-button2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 8px 16px;
-  border-radius: 100px;
-  border: 1px solid #2997ff;
-  color: #2997ff;
-  font-size: 14px;
-  font-weight: 300;
-  letter-spacing: -0.374px;
-}
-.small1-txt1 {
+    align-items: center;
+    gap: 12px;
+    margin-top: 16px;
+  }
+  .small-button1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
+    border-radius: 100px;
+    border: 1px solid #0071e3;
+    background-color: #0071e3;
+    color: white;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: -0.374px;
+  }
+  .small-button2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
+    border-radius: 100px;
+    border: 1px solid #2997ff;
+    color: #2997ff;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: -0.374px;
+  }
+  .small1-txt1 {
     background-image: url(./images/ipadair.png);
     width: 180px;
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 9px;
-}
-.color-txt {
+  }
+  .color-txt {
     width: 169px;
     height: 18px;
     text-align: center;
     font-size: 14px;
     font-weight: 400;
-    background: linear-gradient(90deg, #0090F7 0%, #BA62FC 33.33%, #F2416B 66.67%, #F55600 100%);
+    background: linear-gradient(
+      90deg,
+      #0090f7 0%,
+      #ba62fc 33.33%,
+      #f2416b 66.67%,
+      #f55600 100%
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     position: absolute;
     bottom: 36px;
-}
-.small2-txt {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2px;
-  margin: 0;
-  margin-top: 330px;
-}
-.small2-color {
-    color: #F5F5F7;
-}
-.small3-txt1 {
+  }
+  .small2-txt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    margin: 0;
+    margin-top: 330px;
+  }
+  .small2-color {
+    color: #f5f5f7;
+  }
+  .small3-txt1 {
     width: 152px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 4px;
-}
-.small3-watch1 {
+  }
+  .small3-watch1 {
     display: flex;
     gap: 8px;
     align-items: flex-start;
-}
-.small3-watch1txt {
+  }
+  .small3-watch1txt {
     text-align: center;
     font-size: 32px;
     font-weight: 600;
-}
-.small3-watch2 {
+  }
+  .small3-watch2 {
     color: black;
     text-align: center;
     font-size: 15px;
     font-weight: 600;
     line-height: normal;
     letter-spacing: 2px;
-}
-.small3-txt2 {
+  }
+  .small3-txt2 {
     font-size: 18px;
     text-align: center;
     font-weight: 300;
-    color: #1D1D1F;
+    color: #1d1d1f;
     line-height: 25px;
     margin-bottom: 16px;
     width: 285px;
-}
-.small-txt2-1 {
+  }
+  .small-txt2-1 {
     width: 360px;
-}
+  }
+  .scroll-big {
+    height: 368px;
+  }
+  .poster {
+    height: 368px;
+    min-width: 689px;
+  }
+  .stream {
+    gap: 18px;
+    margin-left: 30px;
+    margin-top: 305px;
+  }
+  .stream-box {
+    padding: 8px 14px;
+    font-size: 14px;
+  }
 }
 /* phone size */
 @media (max-width: 390px) {
@@ -756,12 +919,64 @@ body {
   }
   .small {
     height: auto;
-    background-size: cover; 
+    background-size: cover;
     flex-direction: column;
   }
   .small-pic {
     height: 500px;
     width: auto;
     background-size: cover;
+  }
+  .scroll-big {
+    height: 495px;
+  }
+  .poster {
+    height: 495px;
+    min-width: 274px;
+    position: relative;
+  }
+  .movie1 {
+    background-image: url(./images/movie1-1.jpg);
+  }
+  .movie2 {
+    background-image: url(./images/movie2-2.jpg);
+  }
+  .movie3 {
+    background-image: url(./images/movie3-3.jpg);
+  }
+  .movie4 {
+    background-image: url(./images/movie4-4.jpg);
+  }
+  .movie5 {
+    background-image: url(./images/movie5-5.jpg);
+  }
+  .movie6 {
+    background-image: url(./images/movie6-6.jpg);
+  }
+  .movie7 {
+    background-image: url(./images/movie7-7.jpg);
+  }
+  .movie8 {
+    background-image: url(./images/movie8-8.jpg);
+  }
+  .movie9 {
+    background-image: url(./images/movie9-9.jpg);
+  }
+  .stream {
+    flex-direction: column-reverse;
+    margin-top: 0;
+    margin-left: 0;
+    position: absolute;
+    bottom: 30px;
+    left: calc(50% - 110px);
+  }
+  .stream-genre {
+    flex-direction: column;
+    align-items: center;
+    width: 220px;
+    text-align: center;
+  }
+  .tseg {
+    display: none;
   }
 }
