--- a/storestyle.css
+++ b/storestyle.css
@@ -386,6 +386,7 @@ body {
   transition: all 0.3s ease;
   background-color: white;
   overflow: hidden;
+  position: relative;
 }
 .sec2-item:hover {
   transform: scale(1.01);
@@ -411,6 +412,8 @@ body {
   justify-content: center;
   align-items: center;
   gap: 7px;
+  position: absolute;
+  top: 301px;
 }
 .circle {
   width: 12px;
@@ -424,6 +427,28 @@ body {
   line-height: 16px;
   font-weight: 500;
   width: calc(100% - 60px);
+  position: absolute;
+  top: 359px;
+}
+.sec2-txt2 {
+  color: rgb(29, 29, 31);
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 21px;
+  justify-content: flex-start;
+  width: calc(100% - 60px);
+  position: absolute;
+  top: 381px;
+}
+.sec2-txt3 {
+  color: rgb(29, 29, 31);
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
 }
 .sec2-1 {
   margin-left: 140px;
@@ -438,4 +463,102 @@ body {
 .sec2-2 {
   width: 313px;
   height: 301px;
+}
+.sec2-3 {
+  width: 230px;
+  height: 230px;
+  position: absolute;
+  top: 71px;
+  left: 41.5px;
+}
+.sec2-4 {
+  margin-right: 140px;
+}
+.sec3-item {
+  min-width: 480px;
+  height: 500px;
+  scroll-snap-align: center;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  transition: all 0.3s ease;
+  background-color: white;
+  overflow: hidden;
+  position: relative;
+}
+.sec3-item:hover {
+  transform: scale(1.01);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+}
+.sec3-1 {
+  background-image: url(./images2/sec3-1.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 140px;
+}
+.sec3-2 {
+  background-image: url(./images2/sec3-2.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.sec3-3 {
+  background-image: url(./images2/sec3-3.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.sec3-4 {
+  background-image: url(./images2/sec3-4.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.sec3-5 {
+  background-image: url(./images2/sec3-5.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.sec3-6 {
+  background-image: url(./images2/sec3-6.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 140px;
+}
+.sec3-txt1 {
+  margin: 30px 30px 0 30px;
+  color: #424245;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  height: 16px;
+}
+.sec3-txt2 {
+  margin: 8px 30px 0 30px;
+  color: #1d1d1f;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 32px;
+}
+.sec3-txt3 {
+  margin: 10px 60px 0 30px;
+  color: #1d1d1f;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 21px;
+}
+.sec4-1 {
+  margin-left: 140px;
+  min-width: 400px;
+  height: 500px;
+  align-items: flex-start;
+  background-image: url(./images2/sec4-1.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
