--- a/style.css
+++ b/style.css
@@ -427,9 +427,7 @@ a {
   scrollbar-width: none;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
-}
-.scroll-big ::-webkit-scrollbar {
-  display: none;
+  overflow-y: hidden;
 }
 .poster {
   height: 668px;
